# finance-tool

./: Cargo.toml  company_symbols.json  company_symbols.txt  key.txt  readme.md
src/: lib.rs  main.rs
