[package]
name = "finance-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.24.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tui = "0.18.0"
