[package]
name = "finance-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
crossterm = "0.25.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
strum = "0.24.1"
strum_macros = "0.24.3"
tui = "0.19.0"
