[package]
name = "finance-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
crossterm = "0.25.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tui = "0.19.0"
